--- a/snap7-sys/Cargo.toml
+++ b/snap7-sys/Cargo.toml
@@ -5,7 +5,8 @@ authors     = ["hal-rs initiative"]
 license     = "MIT"
 description = "Rust bindings to snap7 library"
 repository  = "https://github.com/hal-rs/snap7"
-categories  = ["HAL", "PLC", "Siemens S7"]
+categories  = ["hardware-support"]
+keywords    = ["HAL", "PLC", "Siemens S7"]
 
 build       = "build.rs"
 
